feat: get record list and info
